# ankara

./: .commitlintrc.json  .env.example  .gitignore  .lintstagedrc.json  .syncpackrc.json  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  turbo.json
.changeset/: config.json
apps/bots/: .env.example  Dockerfile  pyproject.toml
apps/bots/src/bots/: api_client.py  config.py  main.py  models.py  reply_formatter.py  state_machine.py
apps/bots/src/bots/telegram/: adapter.py  sender.py
apps/bots/src/bots/whatsapp/: adapter.py  sender.py  signature.py
apps/mobile/: app.config.ts  env.ts  package.json
apps/mobile/.github/actions/eas-build/: action.yml
apps/mobile/.github/actions/setup-jdk-generate-apk/: action.yml
apps/mobile/.github/actions/setup-node-pnpm-install/: action.yml
apps/mobile/.github/workflows/: compress-images.yml  e2e-android-eas-build.yml  e2e-android-maestro.yml  e2e-android.yml  eas-build-preview.yml  eas-build-prod.yml  expo-doctor.yml  lint-ts.yml  new-app-version.yml  new-github-release.yml  test.yml  type-check.yml
apps/mobile/.maestro/auth/: login-with-validation.yaml  onboarding.yaml
apps/mobile/.maestro/utils/: onboarding-and-login.yaml  onboarding.yaml
apps/mobile/src/app/: consent.tsx
apps/mobile/src/app/(app)/: _layout.tsx  history.tsx  scan.tsx
apps/mobile/src/features/consent/: consent-screen.tsx
apps/mobile/src/features/diagnosis/: api.ts  result-card.tsx  scan-screen.tsx  use-diagnosis-store.ts
apps/mobile/src/features/history/: history-screen.tsx
apps/mobile/src/features/onboarding/: onboarding-screen.tsx
apps/mobile/src/lib/i18n/: utils.tsx
apps/mobile/src/translations/: ar.json  en.json  fr.json
apps/web/: index.html  lint-staged.config.mjs  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/auth/: layout.tsx
apps/web/src/config/: paths.ts
apps/web/src/lib/: authorization.ts
apps/web/src/testing/mocks/: utils.ts
apps/web/src/types/: api.ts
apps/web/src/utils/: auth.ts
docs/: MONOREPO_TOOLING.md  SCAFFOLDING_PLAN.md  TECH_STACK.md
infra/caddy/: Caddyfile
infra/docker/: docker-compose.yml
infra/github-actions/: ci.yml
services/api/: .pre-commit-config.yaml  pyproject.toml
services/api/.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  fastapi-boilerplate-feature-request.md  fastapi-boilerplate-issue.md
services/api/scripts/gunicorn_managing_uvicorn_workers/: .env.example
services/api/scripts/local_with_uvicorn/: .env.example
services/api/scripts/production_with_nginx/: .env.example
services/api/src/app/core/: config.py
services/api/src/app/models/: __init__.py  advice_template.py  enums.py  extension_worker.py  farmer.py  interaction.py  (+1 more)
services/ml/: Dockerfile  pyproject.toml
services/ml/models/: models.config
services/ml/scripts/: generate_placeholder_model.py
services/ml/training/: calibrate.py  evaluate.py  export.py  train.py
(+43 files in other folders)
