[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crop-doctor-bots"
version = "0.1.0"
description = "Crop Doctor WhatsApp and Telegram bot adapters"
authors = [{ name = "Crop Doctor Team" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-telegram-bot>=21.0",
    "cryptography>=42.0",   # 360dialog signature verification
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
