[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ankara-bots"
version = "0.1.0"
description = "Ankara WhatsApp and Telegram bot adapters"
authors = [{ name = "Ankara Team" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-telegram-bot>=21.0",
    "cryptography>=42.0",   # 360dialog signature verification
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
